--- a/src/Shop/Base.lproj/Main.storyboard
+++ b/src/Shop/Base.lproj/Main.storyboard
@@ -48,6 +48,9 @@
                                             <rect key="frame" x="0.0" y="0.0" width="1024" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="JWb-FB-yZ9" kind="show" identifier="showProductDetailSegue" id="u09-Dw-r0Y"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -72,6 +75,27 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H3h-HS-cOn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="27.5390625" y="57.8125"/>
+        </scene>
+        <!--Product-->
+        <scene sceneID="MNO-l7-uzZ">
+            <objects>
+                <viewController title="Product" id="JWb-FB-yZ9" userLabel="Product" customClass="DetailViewController" customModule="Shop" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2rc-gA-Td0"/>
+                        <viewControllerLayoutGuide type="bottom" id="o13-bD-JuE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="qoS-9b-BKH" customClass="ProductDetailView" customModule="Shop" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="productView" destination="qoS-9b-BKH" id="fmR-QY-qTO"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JtP-cU-NWH" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="698" y="58"/>
         </scene>
     </scenes>
 </document>
