--- a/src/Shop/Base.lproj/Main.storyboard
+++ b/src/Shop/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="JWb-FB-yZ9" kind="show" identifier="showProductDetailSegue" id="u09-Dw-r0Y"/>
+                                            <segue destination="JWb-FB-yZ9" kind="show" identifier="showProductDetailSegue" id="SIz-MW-gj9"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -72,6 +72,9 @@
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="phy-lS-AOw" customClass="ShoppingCartButton" customModule="Shop" customModuleProvider="target">
                                 <rect key="frame" x="964" y="4" width="40" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <segue destination="bbL-jE-sdo" kind="presentation" modalPresentationStyle="formSheet" id="9SR-vK-xWt"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
@@ -99,8 +102,11 @@
                     <navigationItem key="navigationItem" title="Product" id="s8D-hh-M5d">
                         <barButtonItem key="rightBarButtonItem" id="3Gx-Ac-qy3">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="biA-U1-WIs" customClass="ShoppingCartButton" customModule="Shop" customModuleProvider="target">
-                                <rect key="frame" x="777" y="7" width="40" height="35"/>
+                                <rect key="frame" x="964" y="4" width="40" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <segue destination="bbL-jE-sdo" kind="presentation" modalPresentationStyle="formSheet" id="gzJ-7Z-w8S"/>
+                                </connections>
                             </button>
                         </barButtonItem>
                     </navigationItem>
@@ -112,5 +118,52 @@
             </objects>
             <point key="canvasLocation" x="698" y="58"/>
         </scene>
+        <!--Shopping Cart-->
+        <scene sceneID="27G-5B-uaE">
+            <objects>
+                <viewController id="reh-gX-gnX" customClass="ShoppingCartViewController" customModule="Shop" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Why-w0-dCV"/>
+                        <viewControllerLayoutGuide type="bottom" id="6IB-WB-XEo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="KSU-IC-rUl" customClass="WorklistView" customModule="Shop" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="0.0" width="540" height="620"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Shopping Cart" id="D3m-eO-erM">
+                        <barButtonItem key="leftBarButtonItem" title="Close" id="vMl-Ns-0gg">
+                            <connections>
+                                <action selector="didTapClose:" destination="reh-gX-gnX" id="uP0-1c-HZv"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="workList" destination="KSU-IC-rUl" id="G9Z-u0-OJV"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NE8-Dd-fN6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="415" y="848"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ynU-z6-cdd">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="g8n-Cv-WqU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="bbL-jE-sdo" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="CrH-tn-3jf" customClass="FUINavigationBar" customModule="SAPFiori">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="reh-gX-gnX" kind="relationship" relationship="rootViewController" id="qrH-17-Jor"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="40" y="848"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="gzJ-7Z-w8S"/>
+    </inferredMetricsTieBreakers>
 </document>
